src/lib/codegen/snapshots/csx__lib__codegen__templates__tests__snapshot_bindings_cargo_toml.snap
---
source: src/lib/codegen/templates.rs
expression: bindings_cargo_toml(PROJECT_NAME)
---
[package]
name = "sample_bindings"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_bytes.workspace = true

chainsight-cdk-macros.workspace = true
chainsight-cdk.workspace = true

