src/lib/codegen/snapshots/csx__lib__codegen__templates__tests__snapshot_canister_cargo_toml.snap
---
source: src/lib/codegen/templates.rs
expression: canister_project_cargo_toml(PROJECT_NAME)
---
[package]
name = "sample_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_bytes.workspace = true
hex.workspace = true

ic-web3-rs.workspace = true
ic-solidity-bindgen.workspace = true
chainsight-cdk-macros.workspace = true
chainsight-cdk.workspace = true

sample = { path = "../../logics/sample" }

