src/lib/codegen/snapshots/csx__lib__codegen__templates__tests__snapshot_dfx_json.snap
---
source: src/lib/codegen/templates.rs
expression: dfx_json(project_ids)
---
{
  "version": 1,
  "canisters": {
    "sample_snapshot": {
      "gzip": true,
      "type": "custom",
      "candid": "./sample_snapshot.did",
      "wasm": "./sample_snapshot.wasm",
      "metadata": [
        {
          "name": "candid:service",
          "visibility": "public"
        }
      ]
    },
    "sample_lens": {
      "gzip": true,
      "type": "custom",
      "candid": "./sample_lens.did",
      "wasm": "./sample_lens.wasm",
      "metadata": [
        {
          "name": "candid:service",
          "visibility": "public"
        }
      ]
    },
    "sample_relayer": {
      "gzip": true,
      "type": "custom",
      "candid": "./sample_relayer.did",
      "wasm": "./sample_relayer.wasm",
      "metadata": [
        {
          "name": "candid:service",
          "visibility": "public"
        }
      ]
    }
  },
  "defaults": {
    "build": {
      "packtool": "",
      "args": ""
    }
  },
  "output_env_file": ".env"
}

