src/lib/codegen/snapshots/csx__lib__codegen__templates__tests__snapshot_gitignore.snap
---
source: src/lib/codegen/templates.rs
expression: gitignore()
---
src/__interfaces
src/accessors
src/bindings
src/canisters
src/target
/artifacts/*
!/artifacts/dfx.json
!/artifacts/canister_ids.json
.env

